--- a/presentation/PITCHME.yaml
+++ b/presentation/PITCHME.yaml
@@ -3,6 +3,7 @@ theme : black
 
 #ロゴアイコンの設定
 # logo : assets/logo.jpg
+theme-override : assets/css/PITCHME.css
 
 #フットノートの設定
 footnote : "© 2019 George (@take4mats)"
