mod by yoshiya 16

--- a/presentation/PITCHME.yaml
+++ b/presentation/PITCHME.yaml
@@ -1,9 +1,8 @@
 #テーマの設定
-theme : black
+theme : simple
 
 #ロゴアイコンの設定
 # logo : assets/logo.jpg
-theme-override : assets/css/PITCHME.css
 
 #フットノートの設定
 footnote : "© 2019 George (@take4mats)"
